[tk-13] Documentação das rotas de pontos
